[package]
name = "auto_unwrap"
version = "1.0.0"
authors = ["AspiringLich"]
description = "A small proc-macro that replaces instances of `?` with `.unwrap()`"
keywords = ["unwrap", "macro", "proc-macro"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# macro stuff
syn = "1.0"